# LitQip

./: .env.example  .gitignore  README.md  pyproject.toml
src/litqip/: __main__.py  constants.py  repl.py
src/litqip/agent/: __init__.py  loop.py  subagent.py
src/litqip/compression/: __init__.py  compactor.py
src/litqip/llm/: __init__.py  adapters.py  client.py  types.py
src/litqip/skills/: __init__.py  loader.py
src/litqip/todo/: __init__.py  manager.py
src/litqip/tools/: __init__.py  bash.py  dispatch.py  file.py  registry.py
