[project]
name = "litqip"
version = "0.1.0"
description = "A simple & elegent agent harness inspired by Claude Code"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
litqip = "litqip.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/litqip"]
